more neutral preset

--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -3,10 +3,10 @@ $breakpoint-m: 1200px;
 $container_width: 1024px;
 
 /* colors */
-$base_color: #fff;
+$base_color: #111;
 $secondary_color: #999;
-$header-background-color: #9bb;
-$footer-background-color: #9bb;
+$header-background-color: #fff;
+$footer-background-color: #fff;
 
 /* typography */
 $font-family: sans-serif;
