friendlier to the eye

--- a/src/pug/card-wrapper.pug
+++ b/src/pug/card-wrapper.pug
@@ -1,7 +1,7 @@
 .two-column-wrapper
     .container
         div.headline
-            h2 2 column card wrapper
+            h2.bottom-gradient-border 2 column card wrapper
     .container
         .card
             figure
