--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,14 +4,13 @@ html
         title Friendly Frontend Prototyper
         link( rel="stylesheet", href="style.css" )
     body
-        header.site-header
+        header.site-header.gradient-border.border-bottom
             .container
                 h1 Friendly Frontend Prototyper
         main
-            include client-viewport.pug
             include card-wrapper.pug
 
-        footer.site-footer
+        footer.site-footer.gradient-border.border-top
             .container
                 p footer
 
